Add a hosts of devops tools

--- a/playbook.yml
+++ b/playbook.yml
@@ -12,6 +12,10 @@
         - wget
         - curl
         - tmux
+        - terraform
+        - packer
+        - docker
+        - kubernetes-cli
 
   - name: Creating github dir
     file:
