--- a/playbook.yml
+++ b/playbook.yml
@@ -92,3 +92,8 @@
         - google-chrome
         - iterm2
         - spectacle
+        - gpg-suite
+        - slack
+        - telegram
+        - whatsapp
+        - postman
